# selinux-explain

./: .gitignore  Cargo.toml  LICENSE  README.md  new_rule.md  rules.toml  selinux-explain.spec
.github/workflows/: ci.yml  release.yml
src/: explainer.rs  main.rs  parser.rs  reader.rs  rules.rs
tests/: cli.rs
