[package]
name = "selinux-explain"
version = "0.4.0"
edition = "2024"
license = "MIT"
description = "Translates SELinux AVC denials into plain English with actionable fix commands"
repository = "https://github.com/mattiabandini1/selinux-explain"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
regex = "1.10"
colored = "2.1"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
